--- a/package.json
+++ b/package.json
@@ -16,25 +16,33 @@
   "author": "Vitalii Zholobitskyi",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^1.1.0",
+    "@material-ui/icons": "^1.1.0",
     "bootstrap": "^4.0.0-alpha",
     "compression": "^1.6.2",
     "express": "^4.14.0",
+    "muicss": "^0.9.39",
     "object-assign": "^4.1.1",
     "promise": "^7.1.1",
     "prop-types": "^15.5.10",
     "react": "^16.3.2",
+    "react-autosize-textarea": "^3.0.3",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.0",
+    "react-router-dom": "^4.2.2",
+    "react-tinymce": "^0.7.0",
     "redbox-react": "^1.3.6",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.78.3",
+    "simple-react-form-material-ui": "^1.7.13",
+    "tinymce": "^4.7.13",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -53,14 +61,16 @@
     "css-loader": "^0.28.1",
     "dirty-chai": "^1.2.2",
     "enzyme": "^2.8.2",
-    "eslint": "^3.19.0",
+    "eslint": "^4.19.1",
+    "eslint-config-google": "^0.9.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-config-standard-react": "^5.0.0",
     "eslint-plugin-babel": "^4.1.1",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^7.0.1",
+    "eslint-plugin-react": "^7.9.1",
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "figures": "^2.0.0",
