--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^4.0.0-alpha",
     "compression": "^1.6.2",
     "express": "^4.14.0",
+    "history": "^4.7.2",
     "muicss": "^0.9.39",
     "object-assign": "^4.1.1",
     "promise": "^7.1.1",
