--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^16.3.2",
     "react-autosize-textarea": "^3.0.3",
     "react-dom": "^16.3.2",
+    "react-mathjax": "^0.1.1",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.0",
     "react-router-dom": "^4.2.2",
@@ -36,6 +37,7 @@
     "redbox-react": "^1.3.6",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
+    "requirejs": "^2.3.5",
     "semantic-ui-react": "^0.78.3",
     "simple-react-form-material-ui": "^1.7.13",
     "tinymce": "^4.7.13",
