--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prop-types": "^15.5.10",
     "react": "^16.3.2",
     "react-autosize-textarea": "^3.0.3",
+    "react-countdown-clock": "^2.4.0",
     "react-dom": "^16.3.2",
     "react-mathjax": "^0.1.1",
     "react-redux": "^5.0.4",
