--- a/package.json
+++ b/package.json
@@ -102,5 +102,8 @@
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.2",
     "yargs": "^8.0.1"
+  },
+  "engines": {
+    "node": "8.4.0"
   }
 }
